# ray-kube

./: .flake8  README.md  pyproject.toml
example/: pyproject.toml  train.def
kubeml/: cluster.py  ray.py  triton.py  utils.py
kubeml/resources/: deployment.py  secret.py  service.py
kubeml/resources/ray/: __init__.py  secret.py  services.py
kubeml/resources/ray/templates/: external.yaml  head.yaml  secret.yaml  worker.yaml
kubeml/resources/triton/: deployment.py
kubeml/resources/triton/templates/: __init__.py  servers.yaml
ray_kube/: __init__.py  cluster.py  deploy.yaml  main.py  request.py  resources.py  triton.py  utils.py
ray_kube/resources/: __init__.py  deployment.py  deployments.py  secret.py  services.py
ray_kube/resources/ray/: deployments.py
ray_kube/resources/ray/templates/: head.yaml
ray_kube/resources/triton/: __init__.py  deployment.py  service.py
ray_kube/resources/triton/templates/: servers.yaml  service.yaml
ray_kube/templates/: __init__.py  deployments.py  internal.yaml  services.py  worker.yaml
