[tool.poetry]
name = "ray-kube"
version = "0.1.0"
description = "Deploy ray clusters with kubernetes"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^28.1.0"
ray = {version = "^2.8.0", extras = ["default"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
