[tool.poetry]
name = "ray-kube"
version = "0.1.0"
description = "Deploy ray clusters with kubernetes"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.12"
ray = {version = "^2.8.0", extras = ["default"]}
kr8s = "^0.10.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
