[tool.poetry]
name = "ray-kube"
version = "0.1.0"
description = "Deploy ray clusters with kubernetes"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ray = {version = "^2.3", extras = ["default"]}
kr8s = "^0.10.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["ray_kube"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
